Bugfixes: textpart indicator position, line breaks in plain text version, python 2->3 bugfix (filter returns iterable)

--- a/sematia/static/css/style.css
+++ b/sematia/static/css/style.css
@@ -297,7 +297,9 @@ pre code {
     border:none !important;
 }
 
-.div[data-type="textpart"] {
+.div[data-type="textpart"] {   
+    position:relative;
+    display:block;
 
 }
 
